src/objects/QPMS__Inspect_Sample__c.object
<CustomObject>
    <description>This object will used to store details of samples used for actual inspection</description>
    <fields>
        <fullName>QPMS__AQL_Limit__c</fullName>
        <description>This filed holds AQL limit for inspection of samples</description>
        <label>AQL Limit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1000</fullName>
                </value>
                <value>
                    <fullName>650</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                </value>
                <value>
                    <fullName>250</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0.65</fullName>
                </value>
                <value>
                    <fullName>0.4</fullName>
                </value>
                <value>
                    <fullName>0.25</fullName>
                </value>
                <value>
                    <fullName>0.15</fullName>
                </value>
                <value>
                    <fullName>0.1</fullName>
                </value>
                <value>
                    <fullName>0.065</fullName>
                </value>
                <value>
                    <fullName>0.04</fullName>
                </value>
                <value>
                    <fullName>0.025</fullName>
                </value>
                <value>
                    <fullName>0.015</fullName>
                </value>
                <value>
                    <fullName>0.01</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__AQL_Table_Type__c</fullName>
        <description>This is used to hold AQL table type.</description>
        <label>AQL Table Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Doubling</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Accept_Point__c</fullName>
        <description>This field stored the accept point of samples</description>
        <label>Accept Point</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Critical_Accept_Point__c</fullName>
        <label>Accept Point</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Critical_Count__c</fullName>
        <description>critical fail count</description>
        <label>Critical Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Critical_Failed_Samples__c</fullName>
        <formula>QPMS__Inspection_Task__r.QPMS__Critical_Result__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Critical Failed Samples</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Critical_Reject_Point__c</fullName>
        <label>Reject Point</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Critical__c</fullName>
        <description>This is a picklist field hold the Critical values</description>
        <label>Critical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1000</fullName>
                </value>
                <value>
                    <fullName>650</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                </value>
                <value>
                    <fullName>250</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0.65</fullName>
                </value>
                <value>
                    <fullName>0.4</fullName>
                </value>
                <value>
                    <fullName>0.25</fullName>
                </value>
                <value>
                    <fullName>0.15</fullName>
                </value>
                <value>
                    <fullName>0.1</fullName>
                </value>
                <value>
                    <fullName>0.065</fullName>
                </value>
                <value>
                    <fullName>0.04</fullName>
                </value>
                <value>
                    <fullName>0.025</fullName>
                </value>
                <value>
                    <fullName>0.015</fullName>
                </value>
                <value>
                    <fullName>0.01</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Exported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to check export is done or not</description>
        <label>Exported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>This is unique External Id field</description>
        <label>External Id</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Criteria_Type__c</fullName>
        <label>Inspection Criteria Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attribute</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Id__c</fullName>
        <formula>QPMS__Inspection_Task__r.QPMS__Inspection__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inspection Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Level__c</fullName>
        <description>This field is used to hold different types of inspection level</description>
        <label>Inspection Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Special 1</fullName>
                </value>
                <value>
                    <fullName>Special 2</fullName>
                </value>
                <value>
                    <fullName>Special 3</fullName>
                </value>
                <value>
                    <fullName>Special 4</fullName>
                </value>
                <value>
                    <fullName>General I</fullName>
                </value>
                <value>
                    <fullName>General II</fullName>
                </value>
                <value>
                    <fullName>General III</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Result__c</fullName>
        <formula>IF( TEXT(QPMS__Result__c)==&apos;Empty&apos;,&apos;&apos;,TEXT(QPMS__Result__c) )</formula>
        <label>Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_State__c</fullName>
        <description>This field is used to hold inspection state.</description>
        <label>Inspection State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Reduced</fullName>
                </value>
                <value>
                    <fullName>Tighten</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look up</description>
        <label>Inspection Task</label>
        <referenceTo>QPMS__Inspection_Task__c</referenceTo>
        <relationshipLabel>Inspect Samples</relationshipLabel>
        <relationshipName>Inspect_Samples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Lot_Size_Max__c</fullName>
        <description>This field stored Maximum Lot size of sample</description>
        <label>Lot Size (Max)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Lot_Size_Min__c</fullName>
        <description>This field used to store lot size of samples.</description>
        <label>Lot Size (Min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Lot_size__c</fullName>
        <description>lot size for fixed</description>
        <label>Lot size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Major_Accept_Point__c</fullName>
        <label>Accept Point</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Major_Count__c</fullName>
        <label>Major Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Major_Failed_Samples__c</fullName>
        <formula>QPMS__Inspection_Task__r.QPMS__Major_Result__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Major Failed Samples</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Major_Reject_Point__c</fullName>
        <label>Reject Point</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Major__c</fullName>
        <description>This is a pick list field which hold the Major values</description>
        <label>Major</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1000</fullName>
                </value>
                <value>
                    <fullName>650</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                </value>
                <value>
                    <fullName>250</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0.65</fullName>
                </value>
                <value>
                    <fullName>0.4</fullName>
                </value>
                <value>
                    <fullName>0.25</fullName>
                </value>
                <value>
                    <fullName>0.15</fullName>
                </value>
                <value>
                    <fullName>0.1</fullName>
                </value>
                <value>
                    <fullName>0.065</fullName>
                </value>
                <value>
                    <fullName>0.04</fullName>
                </value>
                <value>
                    <fullName>0.025</fullName>
                </value>
                <value>
                    <fullName>0.015</fullName>
                </value>
                <value>
                    <fullName>0.01</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Minor_Accept_Point__c</fullName>
        <label>Accept Point</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Minor_Count__c</fullName>
        <label>Minor Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Minor_Failed_Samples__c</fullName>
        <formula>QPMS__Inspection_Task__r.QPMS__Minor_Result__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minor Failed Samples</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Minor_Reject_Point__c</fullName>
        <label>Reject Point</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Minor__c</fullName>
        <description>This is a pick list field to hold Minor values</description>
        <label>Minor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1000</fullName>
                </value>
                <value>
                    <fullName>650</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                </value>
                <value>
                    <fullName>250</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0.65</fullName>
                </value>
                <value>
                    <fullName>0.4</fullName>
                </value>
                <value>
                    <fullName>0.25</fullName>
                </value>
                <value>
                    <fullName>0.15</fullName>
                </value>
                <value>
                    <fullName>0.1</fullName>
                </value>
                <value>
                    <fullName>0.065</fullName>
                </value>
                <value>
                    <fullName>0.04</fullName>
                </value>
                <value>
                    <fullName>0.025</fullName>
                </value>
                <value>
                    <fullName>0.015</fullName>
                </value>
                <value>
                    <fullName>0.01</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Ordered_Quantity__c</fullName>
        <description>Ordered Quantity</description>
        <label>Ordered Quantity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Plan_Type__c</fullName>
        <description>plan type values</description>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>AQL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Reject_Point__c</fullName>
        <description>This field stored the reject point of samples</description>
        <label>Reject Point</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Result__c</fullName>
        <defaultValue>&apos;Empty&apos;</defaultValue>
        <description>Result for sample</description>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Empty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Sample_Size__c</fullName>
        <description>This field used to store Sample size</description>
        <label>Sample Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Sample__c</fullName>
        <label>Sample</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Total_Passed_Samples__c</fullName>
        <formula>QPMS__Inspection_Task__r.QPMS__Total_Passed_Samples__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Passed Samples</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Total_Rejected_Samples__c</fullName>
        <description>Total Rejected Samples</description>
        <label>Total Rejected Samples</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Use_Severity_based_AQL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This filed used to check the severity based AQL is to be used or not.</description>
        <label>Use Severity based AQL?</label>
        <type>Checkbox</type>
    </fields>
    <label>Inspect Sample</label>
    <nameField>
        <displayFormat>INS-SP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspect Samples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>